--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,24 +11,21 @@
 
     jobs:
       test:
-        name: Test docker build
+        name: Test
         runs-on: ubuntu-latest
-
-        steps:
-          - uses: actions/checkout@v4
     
-          - name: Test building image
-            run: docker build -t docker-ansible-cicd .
-
+        steps:
+          - uses: actions/checkout@v2
+    
+          - name: Test building image.
+            run: docker build -t docker-ansible .
+    
           - name: Run the built image.
-            run: >-
-              docker run --name test-container -d --privileged
-              -v /sys/fs/cgroup:/sys/fs/cgroup:rw --cgroupns=host
-              docker-ansible-cicd
-
-          - name: Check Ansible is running
+            run: docker run --name test-container -d --cgroupns=host --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:rw docker-ansible
+    
+          - name: Verify Ansible is accessible in the built image.
             run: docker exec --tty test-container env TERM=xterm ansible --version
-
+    
       release:
         name: Release to Docker Hub
         runs-on: ubuntu-latest
