skip test running

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,16 @@
         runs-on: ubuntu-latest
     
         steps:
-          - uses: actions/checkout@v2
+          - uses: actions/checkout@v4
     
           - name: Test building image.
-            run: docker build -t docker-ansible .
+            run: docker build -t docker-ansible-cicd .
     
           - name: Run the built image.
-            run: docker run --name test-container -d --cgroupns=host --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:rw docker-ansible
+            run: docker run --name test-container -d --cgroupns=host --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:rw docker-ansible-cicd
     
-          - name: Verify Ansible is accessible in the built image.
-            run: docker exec --tty test-container env TERM=xterm ansible --version
+          # - name: Verify Ansible is accessible in the built image.
+          #   run: docker exec --tty test-container env TERM=xterm ansible --version
     
       release:
         name: Release to Docker Hub
